# patchmaps

./: LICENSE  README.md  pyproject.toml
patchmaps/: __init__.py  patchmaps.py
patchstructure/: patchstructure.py  requirements.txt
tutorials/test_data/australia/: test_australia_field.shp  test_australia_field.shx  test_australia_line.dbf  test_australia_line.shp  test_australia_line.shx
tutorials/test_data/brazil/: test_brazil_field.shp  test_brazil_field.shx  test_brazil_line.dbf  test_brazil_line.shp  test_brazil_line.shx
tutorials/test_data/usa/: test_usa_field.shp  test_usa_field.shx  test_usa_line.shp  test_usa_line.shx
