[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "patchmaps"
authors = [
    {name = "Marco Donat & Jonas Geistert", email = "marco.donat@zalf.de"},
]
description = "Creates rectangular Patchstructure parallel to permanent traffic lines"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "MIT"}
dependencies = [
    "geopandas",
    "numpy",
    "pyproj",
    "shapely", 
]
dynamic = ["version"]

