[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "patchmaps"
version = "0.2.0"

authors = [
    {name = "Marco Donat & Jonas Geistert", email = "marco.donat@zalf.de"},
]
description = "Creates rectangular Patchstructure parallel to permanent traffic lines"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "MIT"}
dependencies = [
    "geopandas >=0.12.2",
    "numpy >=1.24.2",
    "pyproj >= 3.0.1",
    "shapely >= 1.7.1", 
]

[tool.setuptools.packages.find]
include = ["patchmaps*"]
namespaces = true
